// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays a connectivity banner when network is down 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Conversation
    me={
      Object {
        "conversation": Object {
          "__id": "conversation-420",
          "from": Object {
            "email": "anita@garibaldi.br",
            "initials": "AG",
            "name": "Anita Garibaldi",
          },
          "id": "420",
          "initial_message": "Adoro! Por favor envie-me mais informações",
          "items": Array [
            Object {
              "item": Object {
                "__typename": "Artwork",
                "artist_names": "Adrian Piper",
                "date": "1974",
                "href": "/artwork/adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                "id": "adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                "image": Object {
                  "image_url": "https://d32dm0rphc51dk.cloudfront.net/J0uofgV9e8cIxGiZwn12mg/:version.jpg",
                  "url": "https://d32dm0rphc51dk.cloudfront.net/W1FkNoM9IjrND_xv_DTkeg/normalized.jpg",
                },
                "title": "The Mythic Being: Sol’s Drawing #1–5",
              },
              "title": "The Mythic Being: Sol’s Drawing #1–5",
            },
          ],
          "last_message_id": "222",
          "messages": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "__id": "unique-id",
                  "attachments": Array [],
                  "body": "Adoro! Por favor envie-me mais informações",
                  "from": Object {
                    "email": "percy@cat.com",
                    "name": "Percy",
                  },
                  "from_email_address": "anita@garibaldi.br",
                  "id": 222,
                },
              },
            ],
          },
          "to": Object {
            "initials": "KK",
            "name": "Kimberly Klark",
          },
          "unread": false,
        },
        "initials": "JC",
      }
    }
    tracking={
      Object {
        "getTrackingData": [Function],
        "trackEvent": [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Styled(View)>
        <Styled(View)>
          <Styled(View)>
            <SmallHeadline
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              Kimberly Klark
            </SmallHeadline>
            <View />
          </Styled(View)>
        </Styled(View)>
        <ConnectivityBanner />
        <Messages
          componentRef={[Function]}
          conversation={
            Object {
              "__id": "conversation-420",
              "from": Object {
                "email": "anita@garibaldi.br",
                "initials": "AG",
                "name": "Anita Garibaldi",
              },
              "id": "420",
              "initial_message": "Adoro! Por favor envie-me mais informações",
              "items": Array [
                Object {
                  "item": Object {
                    "__typename": "Artwork",
                    "artist_names": "Adrian Piper",
                    "date": "1974",
                    "href": "/artwork/adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                    "id": "adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                    "image": Object {
                      "image_url": "https://d32dm0rphc51dk.cloudfront.net/J0uofgV9e8cIxGiZwn12mg/:version.jpg",
                      "url": "https://d32dm0rphc51dk.cloudfront.net/W1FkNoM9IjrND_xv_DTkeg/normalized.jpg",
                    },
                    "title": "The Mythic Being: Sol’s Drawing #1–5",
                  },
                  "title": "The Mythic Being: Sol’s Drawing #1–5",
                },
              ],
              "last_message_id": "222",
              "messages": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      "__id": "unique-id",
                      "attachments": Array [],
                      "body": "Adoro! Por favor envie-me mais informações",
                      "from": Object {
                        "email": "percy@cat.com",
                        "name": "Percy",
                      },
                      "from_email_address": "anita@garibaldi.br",
                      "id": 222,
                    },
                  },
                ],
              },
              "to": Object {
                "initials": "KK",
                "name": "Kimberly Klark",
              },
              "unread": false,
            }
          }
          onDataFetching={[Function]}
        />
      </Styled(View)>,
      "disabled": true,
      "onSubmit": [Function],
      "value": null,
    },
    "ref": [Function],
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(View)>
            <Styled(View)>
              <SmallHeadline
                style={
                  Object {
                    "fontSize": 14,
                  }
                }
              >
                Kimberly Klark
              </SmallHeadline>
              <View />
            </Styled(View)>
          </Styled(View)>,
          <ConnectivityBanner />,
          <Messages
            componentRef={[Function]}
            conversation={
              Object {
                "__id": "conversation-420",
                "from": Object {
                  "email": "anita@garibaldi.br",
                  "initials": "AG",
                  "name": "Anita Garibaldi",
                },
                "id": "420",
                "initial_message": "Adoro! Por favor envie-me mais informações",
                "items": Array [
                  Object {
                    "item": Object {
                      "__typename": "Artwork",
                      "artist_names": "Adrian Piper",
                      "date": "1974",
                      "href": "/artwork/adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                      "id": "adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                      "image": Object {
                        "image_url": "https://d32dm0rphc51dk.cloudfront.net/J0uofgV9e8cIxGiZwn12mg/:version.jpg",
                        "url": "https://d32dm0rphc51dk.cloudfront.net/W1FkNoM9IjrND_xv_DTkeg/normalized.jpg",
                      },
                      "title": "The Mythic Being: Sol’s Drawing #1–5",
                    },
                    "title": "The Mythic Being: Sol’s Drawing #1–5",
                  },
                ],
                "last_message_id": "222",
                "messages": Object {
                  "edges": Array [
                    Object {
                      "node": Object {
                        "__id": "unique-id",
                        "attachments": Array [],
                        "body": "Adoro! Por favor envie-me mais informações",
                        "from": Object {
                          "email": "percy@cat.com",
                          "name": "Percy",
                        },
                        "from_email_address": "anita@garibaldi.br",
                        "id": 222,
                      },
                    },
                  ],
                },
                "to": Object {
                  "initials": "KK",
                  "name": "Kimberly Klark",
                },
                "unread": false,
              }
            }
            onDataFetching={[Function]}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(View)>
              <SmallHeadline
                style={
                  Object {
                    "fontSize": 14,
                  }
                }
              >
                Kimberly Klark
              </SmallHeadline>
              <View />
            </Styled(View)>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <SmallHeadline
                  style={
                    Object {
                      "fontSize": 14,
                    }
                  }
                >
                  Kimberly Klark
                </SmallHeadline>,
                <View />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Kimberly Klark",
                  "style": Object {
                    "fontSize": 14,
                  },
                },
                "ref": null,
                "rendered": "Kimberly Klark",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "componentRef": [Function],
            "conversation": Object {
              "__id": "conversation-420",
              "from": Object {
                "email": "anita@garibaldi.br",
                "initials": "AG",
                "name": "Anita Garibaldi",
              },
              "id": "420",
              "initial_message": "Adoro! Por favor envie-me mais informações",
              "items": Array [
                Object {
                  "item": Object {
                    "__typename": "Artwork",
                    "artist_names": "Adrian Piper",
                    "date": "1974",
                    "href": "/artwork/adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                    "id": "adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                    "image": Object {
                      "image_url": "https://d32dm0rphc51dk.cloudfront.net/J0uofgV9e8cIxGiZwn12mg/:version.jpg",
                      "url": "https://d32dm0rphc51dk.cloudfront.net/W1FkNoM9IjrND_xv_DTkeg/normalized.jpg",
                    },
                    "title": "The Mythic Being: Sol’s Drawing #1–5",
                  },
                  "title": "The Mythic Being: Sol’s Drawing #1–5",
                },
              ],
              "last_message_id": "222",
              "messages": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      "__id": "unique-id",
                      "attachments": Array [],
                      "body": "Adoro! Por favor envie-me mais informações",
                      "from": Object {
                        "email": "percy@cat.com",
                        "name": "Percy",
                      },
                      "from_email_address": "anita@garibaldi.br",
                      "id": 222,
                    },
                  },
                ],
              },
              "to": Object {
                "initials": "KK",
                "name": "Kimberly Klark",
              },
              "unread": false,
            },
            "onDataFetching": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(View)>
          <Styled(View)>
            <Styled(View)>
              <SmallHeadline
                style={
                  Object {
                    "fontSize": 14,
                  }
                }
              >
                Kimberly Klark
              </SmallHeadline>
              <View />
            </Styled(View)>
          </Styled(View)>
          <ConnectivityBanner />
          <Messages
            componentRef={[Function]}
            conversation={
              Object {
                "__id": "conversation-420",
                "from": Object {
                  "email": "anita@garibaldi.br",
                  "initials": "AG",
                  "name": "Anita Garibaldi",
                },
                "id": "420",
                "initial_message": "Adoro! Por favor envie-me mais informações",
                "items": Array [
                  Object {
                    "item": Object {
                      "__typename": "Artwork",
                      "artist_names": "Adrian Piper",
                      "date": "1974",
                      "href": "/artwork/adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                      "id": "adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                      "image": Object {
                        "image_url": "https://d32dm0rphc51dk.cloudfront.net/J0uofgV9e8cIxGiZwn12mg/:version.jpg",
                        "url": "https://d32dm0rphc51dk.cloudfront.net/W1FkNoM9IjrND_xv_DTkeg/normalized.jpg",
                      },
                      "title": "The Mythic Being: Sol’s Drawing #1–5",
                    },
                    "title": "The Mythic Being: Sol’s Drawing #1–5",
                  },
                ],
                "last_message_id": "222",
                "messages": Object {
                  "edges": Array [
                    Object {
                      "node": Object {
                        "__id": "unique-id",
                        "attachments": Array [],
                        "body": "Adoro! Por favor envie-me mais informações",
                        "from": Object {
                          "email": "percy@cat.com",
                          "name": "Percy",
                        },
                        "from_email_address": "anita@garibaldi.br",
                        "id": 222,
                      },
                    },
                  ],
                },
                "to": Object {
                  "initials": "KK",
                  "name": "Kimberly Klark",
                },
                "unread": false,
              }
            }
            onDataFetching={[Function]}
          />
        </Styled(View)>,
        "disabled": true,
        "onSubmit": [Function],
        "value": null,
      },
      "ref": [Function],
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(View)>
              <Styled(View)>
                <SmallHeadline
                  style={
                    Object {
                      "fontSize": 14,
                    }
                  }
                >
                  Kimberly Klark
                </SmallHeadline>
                <View />
              </Styled(View)>
            </Styled(View)>,
            <ConnectivityBanner />,
            <Messages
              componentRef={[Function]}
              conversation={
                Object {
                  "__id": "conversation-420",
                  "from": Object {
                    "email": "anita@garibaldi.br",
                    "initials": "AG",
                    "name": "Anita Garibaldi",
                  },
                  "id": "420",
                  "initial_message": "Adoro! Por favor envie-me mais informações",
                  "items": Array [
                    Object {
                      "item": Object {
                        "__typename": "Artwork",
                        "artist_names": "Adrian Piper",
                        "date": "1974",
                        "href": "/artwork/adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                        "id": "adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                        "image": Object {
                          "image_url": "https://d32dm0rphc51dk.cloudfront.net/J0uofgV9e8cIxGiZwn12mg/:version.jpg",
                          "url": "https://d32dm0rphc51dk.cloudfront.net/W1FkNoM9IjrND_xv_DTkeg/normalized.jpg",
                        },
                        "title": "The Mythic Being: Sol’s Drawing #1–5",
                      },
                      "title": "The Mythic Being: Sol’s Drawing #1–5",
                    },
                  ],
                  "last_message_id": "222",
                  "messages": Object {
                    "edges": Array [
                      Object {
                        "node": Object {
                          "__id": "unique-id",
                          "attachments": Array [],
                          "body": "Adoro! Por favor envie-me mais informações",
                          "from": Object {
                            "email": "percy@cat.com",
                            "name": "Percy",
                          },
                          "from_email_address": "anita@garibaldi.br",
                          "id": 222,
                        },
                      },
                    ],
                  },
                  "to": Object {
                    "initials": "KK",
                    "name": "Kimberly Klark",
                  },
                  "unread": false,
                }
              }
              onDataFetching={[Function]}
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(View)>
                <SmallHeadline
                  style={
                    Object {
                      "fontSize": 14,
                    }
                  }
                >
                  Kimberly Klark
                </SmallHeadline>
                <View />
              </Styled(View)>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <SmallHeadline
                    style={
                      Object {
                        "fontSize": 14,
                      }
                    }
                  >
                    Kimberly Klark
                  </SmallHeadline>,
                  <View />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Kimberly Klark",
                    "style": Object {
                      "fontSize": 14,
                    },
                  },
                  "ref": null,
                  "rendered": "Kimberly Klark",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "componentRef": [Function],
              "conversation": Object {
                "__id": "conversation-420",
                "from": Object {
                  "email": "anita@garibaldi.br",
                  "initials": "AG",
                  "name": "Anita Garibaldi",
                },
                "id": "420",
                "initial_message": "Adoro! Por favor envie-me mais informações",
                "items": Array [
                  Object {
                    "item": Object {
                      "__typename": "Artwork",
                      "artist_names": "Adrian Piper",
                      "date": "1974",
                      "href": "/artwork/adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                      "id": "adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                      "image": Object {
                        "image_url": "https://d32dm0rphc51dk.cloudfront.net/J0uofgV9e8cIxGiZwn12mg/:version.jpg",
                        "url": "https://d32dm0rphc51dk.cloudfront.net/W1FkNoM9IjrND_xv_DTkeg/normalized.jpg",
                      },
                      "title": "The Mythic Being: Sol’s Drawing #1–5",
                    },
                    "title": "The Mythic Being: Sol’s Drawing #1–5",
                  },
                ],
                "last_message_id": "222",
                "messages": Object {
                  "edges": Array [
                    Object {
                      "node": Object {
                        "__id": "unique-id",
                        "attachments": Array [],
                        "body": "Adoro! Por favor envie-me mais informações",
                        "from": Object {
                          "email": "percy@cat.com",
                          "name": "Percy",
                        },
                        "from_email_address": "anita@garibaldi.br",
                        "id": 222,
                      },
                    },
                  ],
                },
                "to": Object {
                  "initials": "KK",
                  "name": "Kimberly Klark",
                },
                "unread": false,
              },
              "onDataFetching": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`looks correct when rendered 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Conversation
    me={
      Object {
        "conversation": Object {
          "__id": "conversation-420",
          "from": Object {
            "email": "anita@garibaldi.br",
            "initials": "AG",
            "name": "Anita Garibaldi",
          },
          "id": "420",
          "initial_message": "Adoro! Por favor envie-me mais informações",
          "items": Array [
            Object {
              "item": Object {
                "__typename": "Artwork",
                "artist_names": "Adrian Piper",
                "date": "1974",
                "href": "/artwork/adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                "id": "adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                "image": Object {
                  "image_url": "https://d32dm0rphc51dk.cloudfront.net/J0uofgV9e8cIxGiZwn12mg/:version.jpg",
                  "url": "https://d32dm0rphc51dk.cloudfront.net/W1FkNoM9IjrND_xv_DTkeg/normalized.jpg",
                },
                "title": "The Mythic Being: Sol’s Drawing #1–5",
              },
              "title": "The Mythic Being: Sol’s Drawing #1–5",
            },
          ],
          "last_message_id": "222",
          "messages": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "__id": "unique-id",
                  "attachments": Array [],
                  "body": "Adoro! Por favor envie-me mais informações",
                  "from": Object {
                    "email": "percy@cat.com",
                    "name": "Percy",
                  },
                  "from_email_address": "anita@garibaldi.br",
                  "id": 222,
                },
              },
            ],
          },
          "to": Object {
            "initials": "KK",
            "name": "Kimberly Klark",
          },
          "unread": false,
        },
        "initials": "JC",
      }
    }
    tracking={
      Object {
        "getTrackingData": [Function],
        "trackEvent": [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Styled(View)>
        <Styled(View)>
          <Styled(View)>
            <SmallHeadline
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              Kimberly Klark
            </SmallHeadline>
            <View />
          </Styled(View)>
        </Styled(View)>
        <Messages
          componentRef={[Function]}
          conversation={
            Object {
              "__id": "conversation-420",
              "from": Object {
                "email": "anita@garibaldi.br",
                "initials": "AG",
                "name": "Anita Garibaldi",
              },
              "id": "420",
              "initial_message": "Adoro! Por favor envie-me mais informações",
              "items": Array [
                Object {
                  "item": Object {
                    "__typename": "Artwork",
                    "artist_names": "Adrian Piper",
                    "date": "1974",
                    "href": "/artwork/adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                    "id": "adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                    "image": Object {
                      "image_url": "https://d32dm0rphc51dk.cloudfront.net/J0uofgV9e8cIxGiZwn12mg/:version.jpg",
                      "url": "https://d32dm0rphc51dk.cloudfront.net/W1FkNoM9IjrND_xv_DTkeg/normalized.jpg",
                    },
                    "title": "The Mythic Being: Sol’s Drawing #1–5",
                  },
                  "title": "The Mythic Being: Sol’s Drawing #1–5",
                },
              ],
              "last_message_id": "222",
              "messages": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      "__id": "unique-id",
                      "attachments": Array [],
                      "body": "Adoro! Por favor envie-me mais informações",
                      "from": Object {
                        "email": "percy@cat.com",
                        "name": "Percy",
                      },
                      "from_email_address": "anita@garibaldi.br",
                      "id": 222,
                    },
                  },
                ],
              },
              "to": Object {
                "initials": "KK",
                "name": "Kimberly Klark",
              },
              "unread": false,
            }
          }
          onDataFetching={[Function]}
        />
      </Styled(View)>,
      "disabled": false,
      "onSubmit": [Function],
      "value": null,
    },
    "ref": [Function],
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(View)>
            <Styled(View)>
              <SmallHeadline
                style={
                  Object {
                    "fontSize": 14,
                  }
                }
              >
                Kimberly Klark
              </SmallHeadline>
              <View />
            </Styled(View)>
          </Styled(View)>,
          false,
          <Messages
            componentRef={[Function]}
            conversation={
              Object {
                "__id": "conversation-420",
                "from": Object {
                  "email": "anita@garibaldi.br",
                  "initials": "AG",
                  "name": "Anita Garibaldi",
                },
                "id": "420",
                "initial_message": "Adoro! Por favor envie-me mais informações",
                "items": Array [
                  Object {
                    "item": Object {
                      "__typename": "Artwork",
                      "artist_names": "Adrian Piper",
                      "date": "1974",
                      "href": "/artwork/adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                      "id": "adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                      "image": Object {
                        "image_url": "https://d32dm0rphc51dk.cloudfront.net/J0uofgV9e8cIxGiZwn12mg/:version.jpg",
                        "url": "https://d32dm0rphc51dk.cloudfront.net/W1FkNoM9IjrND_xv_DTkeg/normalized.jpg",
                      },
                      "title": "The Mythic Being: Sol’s Drawing #1–5",
                    },
                    "title": "The Mythic Being: Sol’s Drawing #1–5",
                  },
                ],
                "last_message_id": "222",
                "messages": Object {
                  "edges": Array [
                    Object {
                      "node": Object {
                        "__id": "unique-id",
                        "attachments": Array [],
                        "body": "Adoro! Por favor envie-me mais informações",
                        "from": Object {
                          "email": "percy@cat.com",
                          "name": "Percy",
                        },
                        "from_email_address": "anita@garibaldi.br",
                        "id": 222,
                      },
                    },
                  ],
                },
                "to": Object {
                  "initials": "KK",
                  "name": "Kimberly Klark",
                },
                "unread": false,
              }
            }
            onDataFetching={[Function]}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(View)>
              <SmallHeadline
                style={
                  Object {
                    "fontSize": 14,
                  }
                }
              >
                Kimberly Klark
              </SmallHeadline>
              <View />
            </Styled(View)>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <SmallHeadline
                  style={
                    Object {
                      "fontSize": 14,
                    }
                  }
                >
                  Kimberly Klark
                </SmallHeadline>,
                <View />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Kimberly Klark",
                  "style": Object {
                    "fontSize": 14,
                  },
                },
                "ref": null,
                "rendered": "Kimberly Klark",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "componentRef": [Function],
            "conversation": Object {
              "__id": "conversation-420",
              "from": Object {
                "email": "anita@garibaldi.br",
                "initials": "AG",
                "name": "Anita Garibaldi",
              },
              "id": "420",
              "initial_message": "Adoro! Por favor envie-me mais informações",
              "items": Array [
                Object {
                  "item": Object {
                    "__typename": "Artwork",
                    "artist_names": "Adrian Piper",
                    "date": "1974",
                    "href": "/artwork/adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                    "id": "adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                    "image": Object {
                      "image_url": "https://d32dm0rphc51dk.cloudfront.net/J0uofgV9e8cIxGiZwn12mg/:version.jpg",
                      "url": "https://d32dm0rphc51dk.cloudfront.net/W1FkNoM9IjrND_xv_DTkeg/normalized.jpg",
                    },
                    "title": "The Mythic Being: Sol’s Drawing #1–5",
                  },
                  "title": "The Mythic Being: Sol’s Drawing #1–5",
                },
              ],
              "last_message_id": "222",
              "messages": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      "__id": "unique-id",
                      "attachments": Array [],
                      "body": "Adoro! Por favor envie-me mais informações",
                      "from": Object {
                        "email": "percy@cat.com",
                        "name": "Percy",
                      },
                      "from_email_address": "anita@garibaldi.br",
                      "id": 222,
                    },
                  },
                ],
              },
              "to": Object {
                "initials": "KK",
                "name": "Kimberly Klark",
              },
              "unread": false,
            },
            "onDataFetching": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(View)>
          <Styled(View)>
            <Styled(View)>
              <SmallHeadline
                style={
                  Object {
                    "fontSize": 14,
                  }
                }
              >
                Kimberly Klark
              </SmallHeadline>
              <View />
            </Styled(View)>
          </Styled(View)>
          <Messages
            componentRef={[Function]}
            conversation={
              Object {
                "__id": "conversation-420",
                "from": Object {
                  "email": "anita@garibaldi.br",
                  "initials": "AG",
                  "name": "Anita Garibaldi",
                },
                "id": "420",
                "initial_message": "Adoro! Por favor envie-me mais informações",
                "items": Array [
                  Object {
                    "item": Object {
                      "__typename": "Artwork",
                      "artist_names": "Adrian Piper",
                      "date": "1974",
                      "href": "/artwork/adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                      "id": "adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                      "image": Object {
                        "image_url": "https://d32dm0rphc51dk.cloudfront.net/J0uofgV9e8cIxGiZwn12mg/:version.jpg",
                        "url": "https://d32dm0rphc51dk.cloudfront.net/W1FkNoM9IjrND_xv_DTkeg/normalized.jpg",
                      },
                      "title": "The Mythic Being: Sol’s Drawing #1–5",
                    },
                    "title": "The Mythic Being: Sol’s Drawing #1–5",
                  },
                ],
                "last_message_id": "222",
                "messages": Object {
                  "edges": Array [
                    Object {
                      "node": Object {
                        "__id": "unique-id",
                        "attachments": Array [],
                        "body": "Adoro! Por favor envie-me mais informações",
                        "from": Object {
                          "email": "percy@cat.com",
                          "name": "Percy",
                        },
                        "from_email_address": "anita@garibaldi.br",
                        "id": 222,
                      },
                    },
                  ],
                },
                "to": Object {
                  "initials": "KK",
                  "name": "Kimberly Klark",
                },
                "unread": false,
              }
            }
            onDataFetching={[Function]}
          />
        </Styled(View)>,
        "disabled": false,
        "onSubmit": [Function],
        "value": null,
      },
      "ref": [Function],
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(View)>
              <Styled(View)>
                <SmallHeadline
                  style={
                    Object {
                      "fontSize": 14,
                    }
                  }
                >
                  Kimberly Klark
                </SmallHeadline>
                <View />
              </Styled(View)>
            </Styled(View)>,
            false,
            <Messages
              componentRef={[Function]}
              conversation={
                Object {
                  "__id": "conversation-420",
                  "from": Object {
                    "email": "anita@garibaldi.br",
                    "initials": "AG",
                    "name": "Anita Garibaldi",
                  },
                  "id": "420",
                  "initial_message": "Adoro! Por favor envie-me mais informações",
                  "items": Array [
                    Object {
                      "item": Object {
                        "__typename": "Artwork",
                        "artist_names": "Adrian Piper",
                        "date": "1974",
                        "href": "/artwork/adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                        "id": "adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                        "image": Object {
                          "image_url": "https://d32dm0rphc51dk.cloudfront.net/J0uofgV9e8cIxGiZwn12mg/:version.jpg",
                          "url": "https://d32dm0rphc51dk.cloudfront.net/W1FkNoM9IjrND_xv_DTkeg/normalized.jpg",
                        },
                        "title": "The Mythic Being: Sol’s Drawing #1–5",
                      },
                      "title": "The Mythic Being: Sol’s Drawing #1–5",
                    },
                  ],
                  "last_message_id": "222",
                  "messages": Object {
                    "edges": Array [
                      Object {
                        "node": Object {
                          "__id": "unique-id",
                          "attachments": Array [],
                          "body": "Adoro! Por favor envie-me mais informações",
                          "from": Object {
                            "email": "percy@cat.com",
                            "name": "Percy",
                          },
                          "from_email_address": "anita@garibaldi.br",
                          "id": 222,
                        },
                      },
                    ],
                  },
                  "to": Object {
                    "initials": "KK",
                    "name": "Kimberly Klark",
                  },
                  "unread": false,
                }
              }
              onDataFetching={[Function]}
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(View)>
                <SmallHeadline
                  style={
                    Object {
                      "fontSize": 14,
                    }
                  }
                >
                  Kimberly Klark
                </SmallHeadline>
                <View />
              </Styled(View)>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <SmallHeadline
                    style={
                      Object {
                        "fontSize": 14,
                      }
                    }
                  >
                    Kimberly Klark
                  </SmallHeadline>,
                  <View />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Kimberly Klark",
                    "style": Object {
                      "fontSize": 14,
                    },
                  },
                  "ref": null,
                  "rendered": "Kimberly Klark",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "componentRef": [Function],
              "conversation": Object {
                "__id": "conversation-420",
                "from": Object {
                  "email": "anita@garibaldi.br",
                  "initials": "AG",
                  "name": "Anita Garibaldi",
                },
                "id": "420",
                "initial_message": "Adoro! Por favor envie-me mais informações",
                "items": Array [
                  Object {
                    "item": Object {
                      "__typename": "Artwork",
                      "artist_names": "Adrian Piper",
                      "date": "1974",
                      "href": "/artwork/adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                      "id": "adrian-piper-the-mythic-being-sols-drawing-number-1-5",
                      "image": Object {
                        "image_url": "https://d32dm0rphc51dk.cloudfront.net/J0uofgV9e8cIxGiZwn12mg/:version.jpg",
                        "url": "https://d32dm0rphc51dk.cloudfront.net/W1FkNoM9IjrND_xv_DTkeg/normalized.jpg",
                      },
                      "title": "The Mythic Being: Sol’s Drawing #1–5",
                    },
                    "title": "The Mythic Being: Sol’s Drawing #1–5",
                  },
                ],
                "last_message_id": "222",
                "messages": Object {
                  "edges": Array [
                    Object {
                      "node": Object {
                        "__id": "unique-id",
                        "attachments": Array [],
                        "body": "Adoro! Por favor envie-me mais informações",
                        "from": Object {
                          "email": "percy@cat.com",
                          "name": "Percy",
                        },
                        "from_email_address": "anita@garibaldi.br",
                        "id": 222,
                      },
                    },
                  ],
                },
                "to": Object {
                  "initials": "KK",
                  "name": "Kimberly Klark",
                },
                "unread": false,
              },
              "onDataFetching": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
